# qenex-os

./: .gitignore  ACTUAL_CAPABILITIES.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_FIX_APPLIED.md  AUDIT_RESPONSE.md  COMPATIBILITY.md  COMPREHENSIVE_AUDIT.md  COMPREHENSIVE_CRITICAL_RISK_ANALYSIS.md  CRITICAL_AUDIT.md  CRITICAL_SECURITY_AUDIT.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  ENTERPRISE_ECOSYSTEM_COMPLETE.md  ENTERPRISE_VERIFICATION_REPORT.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  Makefile.kernel  PROVEN_FUNCTIONALITY.md  QENEX_COMPLETION_SUMMARY.md  QENEX_TRANSFORMATION_COMPLETE.md  QENEX_VALIDATION_REPORT.md  README.md  README_HONEST.md  SECURITY.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_FIXES_APPLIED.md  SYSTEM_ARCHITECTURE.md  SYSTEM_STATUS.md  TECHNICAL_ARCHITECTURE.md  ULTRA_SKEPTICAL_AUDIT.md  advanced_financial_protocols.py  ai_ml_system.py  ai_self_improvement_engine.py  architecture.md  banking_protocols.py  blockchain.py  (+65 more)
.cargo/: config.toml
.github/workflows/: ci-cd-pipeline.yml
ai/: self_improving.py  self_improving_system.py
architecture/: ha_cluster.rs
banking/: integration.py
boot/: boot.asm  multiboot2_header.asm
bulletproof_defi/: BulletproofDeFiSystem.py
bulletproof_defi/contracts/: BulletproofQXCToken.sol
bulletproof_token/contracts/: BulletproofQXCTokenV2.sol
bulletproof_token/deploy/: deployment_script.js
comprehensive_docs/: README.md
core/: __init__.py  ai_engine.py  ai_self_improvement.py  autonomous_kernel.py  blockchain_engine.py  financial_kernel.py  payment_protocols.py  perfect_kernel.py  performance_optimizer.py  proven_working.py  quantum_cryptography.py  realistic_ai.py  secure_database.py  security_fortress.py  self_healing_monitor.py  working_implementation.py  zero_knowledge_auth.py
core/ai/: ai_engine.py
core/defi/: defi_integration.py
core/network/: network_stack.py
core/security/: __init__.py  security_manager.py
core/system/: kernel.py
critical_components/: __init__.py  distributed_consensus.py  ml_fraud_detection.py  realtime_settlement.py  self_healing_infrastructure.py
cross_platform/: compatibility.cpp
docs/: QUICK_START.md  SYSTEM_OVERVIEW.md
enterprise_system/: advanced_ai.py  advanced_network.py  bulletproof_enterprise_system.py  enterprise_integrated_system.py  ultra_comprehensive_test_suite.py
kernel/: Makefile  cross_platform_kernel.rs  kernel.c  qenex_kernel.c
models/: model_versions.db  registry.db  xor_trained.pkl
platform/: cross_platform_layer.py
production_system/: __init__.py  blockchain_integration.py  microservices_architecture.py  monitoring_observability.py  scalable_database_layer.py  secure_auth_system.py
protocols/: universal_banking.go
qenex_core_modules/: financial_engine.py  quantum_core.rs  quantum_financial_engine.py  unified_financial_core.py  working_implementation.py
qenex_core_modules/ai/: __init__.py
qenex_core_modules/defi/: __init__.py  defi_integration.py
qenex_core_modules/network/: __init__.py
qenex_core_modules/system/: __init__.py
real_system/: __init__.py  ai.py  blockchain.py  network.py  process.py
resilience/: auto_recovery.rs
secure_storage/: audit.db  system.db  wallets.db
src/: api_server.rs  auth.rs  consensus.rs  core.rs  error.rs  lib.rs  main.rs  monitoring.rs  network.rs  types.rs
src/ai/: mod.rs
src/api/: mod.rs
src/bootloader/: mod.rs
src/cluster/: mod.rs
src/compliance/: compliance_tests.rs  live_feeds.rs  mod.rs  real_time_compliance.rs
src/consensus/: pbft.rs
src/core/: consensus.rs  crypto.rs  mod.rs  network.rs  security.rs  storage.rs  transaction.rs
src/crypto/: hsm.rs  mod.rs  post_quantum.rs  pq_tests.rs  quantum.rs  quantum_kex.rs
src/kernel/: bare_metal.rs  boot.s  main.c  mod.rs
src/protocols/: mod.rs
src/settlement/: rtgs.rs
src/storage/: cache.rs  database.rs  migrations.rs  mod.rs  models.rs
src/testing/: mod.rs
src/transaction/: acid_engine.rs  acid_tests.rs  engine.rs  mod.rs
src/userspace/: mod.rs  security.rs
tests/: integration_test_suite.py  system_validation.py  test_auth_system.py  test_database_layer.py  test_perfect_kernel.py
verified_system/: comprehensive_test_suite.py  real_ai.py  real_blockchain.py  real_network.py  real_process_manager.py
