[package]
name = "qenex-os"
version = "1.0.0"
edition = "2021"
authors = ["QENEX Team <dev@qenex.ai>"]
description = "Production-ready banking system with secure transaction processing"
license = "MIT"
repository = "https://github.com/abdulrahman305/qenex-os"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-br", "trace", "limit"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono", "bigdecimal"] }

# Authentication & Security
argon2 = "0.5"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
sha3 = "0.10"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
totp-lite = "2.0"
rand = "0.8"
zeroize = "1.7"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Numbers
rust_decimal = { version = "1.33", features = ["serde"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
mockall = "0.12"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
rstest = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true